--- a/index.html
+++ b/index.html
@@ -32,17 +32,27 @@
             <img class="fluid-img py-3 mx-3" src="img/Logo.png" >
             <h1 class="fs-1 align-self-center">Campo minato</h1>
         </div>
-        <button type="button" class="btn btn-secondary btn-sm  mx-3 button-color ">Play</button>
+        <div>
+             <select name="level" id="select-level">
+                <option value="100">Facile</option>
+                <option value="81">Medio</option>
+                <option value="49">Difficile</option>
+             </select>
+            <button type="button" class="btn btn-secondary btn-sm  mx-3 button-color ">Play</button>
+        </div>
     </header>
     <main class="back-color">
         <div class="container">
             <div class="grid">
+                <div class="start-screen d-flex justify-content-center align-items-center">
+                    <h2>Benvenuto in campo minato</h2>
+                </div>
     
             </div>
         </div>
     </main>
     <footer>
-        <p class="px-4 pt-3">Made with <i class="bi bi-heart-fill"></i> by <a class="link-color" href="http://">Boolean</a></p>
+        <p class="px-4 pt-3">Made with <i class="bi bi-heart-fill"></i> by <a class="link-color" href="">Boolean</a></p>
     </footer>
     
 </body>
